# barct-ocr-tool

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  ocr.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: uso.txt
ocr_tool/: __init__.py  cli.py
openclaw-skill/: SKILL.md
