[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-ocr-skill"
version = "0.1.0"
description = "OCR CLI para OpenClaw: extrae texto de PDF escaneado"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.0.0",
]

[project.scripts]
openclaw-ocr = "ocr_tool.cli:main"

[tool.setuptools]
packages = ["ocr_tool"]
